<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_people"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_people" />

    <item
        android:id="@+id/navigation_compass"
        android:icon="@drawable/ic_explore_24px"
        android:title="@string/title_compass" />

    <item

        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_create_black_24dp"
        android:title="@string/title_profile" />

</menu>
